force-app/main/default/objects/Opportunity/fields/Hash__c.field-meta.xml
<CustomField>
    <fullName>Hash__c</fullName>
    <label>Hash</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>