force-app/main/default/objects/Opportunity/fields/HL_Comments__c.field-meta.xml
<CustomField>
    <fullName>HL_Comments__c</fullName>
    <label>HL Comments</label>
    <type>TextArea</type>
</CustomField>