force-app/main/default/objects/Opportunity/fields/HL_RM_Name__c.field-meta.xml
<CustomField>
    <fullName>HL_RM_Name__c</fullName>
    <label>HL RM Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Abhishek</fullName>
            </value>
            <value>
                <fullName>Ajit</fullName>
            </value>
            <value>
                <fullName>AKHIL RAJ</fullName>
            </value>
            <value>
                <fullName>Ashish Ghogale</fullName>
            </value>
            <value>
                <fullName>Krishna Gupta</fullName>
            </value>
            <value>
                <fullName>Kunal Kate</fullName>
            </value>
            <value>
                <fullName>Prathamesh Gawane</fullName>
            </value>
            <value>
                <fullName>Rohan</fullName>
            </value>
            <value>
                <fullName>Sagar Pawar</fullName>
            </value>
            <value>
                <fullName>Shubham</fullName>
            </value>
            <value>
                <fullName>Suyash</fullName>
            </value>
            <value>
                <fullName>Ushmi Gala</fullName>
            </value>
            <value>
                <fullName>Shweta Yadav</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>