force-app/main/default/objects/Opportunity/fields/How_can_make_experience_better_Others__c.field-meta.xml
<CustomField>
    <fullName>How_can_make_experience_better_Others__c</fullName>
    <label>How can make experience better Others</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>