force-app/main/default/objects/Opportunity/fields/How_can_we_make_your_experience_better__c.field-meta.xml
<CustomField>
    <fullName>How_can_we_make_your_experience_better__c</fullName>
    <label>How can we make your experience better</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Better Price/Discounts</fullName>
            </value>
            <value>
                <fullName>Provide more amenities</fullName>
            </value>
            <value>
                <fullName>Providing better details</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>