force-app/main/default/objects/Opportunity/fields/How_did_you_find_out_about_Runwal__c.field-meta.xml
<CustomField>
    <fullName>How_did_you_find_out_about_Runwal__c</fullName>
    <label>How did you find out about Runwal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Friends &amp; Family</fullName>
            </value>
            <value>
                <fullName>Websites/Social Media</fullName>
            </value>
            <value>
                <fullName>Channel Partner</fullName>
            </value>
            <value>
                <fullName>Ads/Outdoor Hoardings</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>