force-app/main/default/objects/Opportunity/fields/How_do_you_prefer_searching_property__c.field-meta.xml
<CustomField>
    <fullName>How_do_you_prefer_searching_property__c</fullName>
    <label>How do you prefer searching property</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Channel Partner</fullName>
            </value>
            <value>
                <fullName>Newsletter</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>