force-app/main/default/objects/Opportunity/fields/Interest_Cost__c.field-meta.xml
<CustomField>
    <fullName>Interest_Cost__c</fullName>
    <description>Subvention/ Deferred/ Flexi payment cost in INR</description>
    <label>Interest Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>