force-app/main/default/objects/Opportunity/fields/Last_CP_Comments__c.field-meta.xml
<CustomField>
    <fullName>Last_CP_Comments__c</fullName>
    <label>Last CP Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>