force-app/main/default/objects/Opportunity/fields/Last_CRM_Call_Attempt_Status__c.field-meta.xml
<CustomField>
    <fullName>Last_CRM_Call_Attempt_Status__c</fullName>
    <label>Last CRM Call Attempt Status</label>
    <type>TextArea</type>
</CustomField>