force-app/main/default/objects/Opportunity/fields/last_CRM_call_attempted_by__c.field-meta.xml
<CustomField>
    <fullName>last_CRM_call_attempted_by__c</fullName>
    <label>last CRM call attempted by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>