force-app/main/default/objects/Opportunity/fields/Last_CRM_Call_Subject__c.field-meta.xml
<CustomField>
    <fullName>Last_CRM_Call_Subject__c</fullName>
    <label>Last CRM Call Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>