force-app/main/default/objects/Opportunity/fields/Last_Sourcing_Closing_Mgr_Change__c.field-meta.xml
<CustomField>
    <fullName>Last_Sourcing_Closing_Mgr_Change__c</fullName>
    <label>Last Sourcing/Closing Mgr Change</label>
    <type>Date</type>
</CustomField>