force-app/main/default/objects/Opportunity/fields/Latest_Inbound_call_Case__c.field-meta.xml
<CustomField>
    <fullName>Latest_Inbound_call_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Latest Inbound  call Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>