force-app/main/default/objects/Opportunity/fields/Latest_SV_Survey_Link__c.field-meta.xml
<CustomField>
    <fullName>Latest_SV_Survey_Link__c</fullName>
    <label>Latest SV Survey Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>