force-app/main/default/objects/Opportunity/fields/Lead_Source_to_acc__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_to_acc__c</fullName>
    <label>Lead Source to acc</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Channel Partner</fullName>
            </value>
            <value>
                <fullName>Reference</fullName>
            </value>
            <value>
                <fullName>Print Newspaper</fullName>
            </value>
            <value>
                <fullName>Print Magzines</fullName>
            </value>
            <value>
                <fullName>Outdoor</fullName>
            </value>
            <value>
                <fullName>Property and other portals</fullName>
            </value>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>Events</fullName>
            </value>
            <value>
                <fullName>Other Media</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Loyalty</fullName>
            </value>
            <value>
                <fullName>Exhibitions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>