force-app/main/default/objects/Opportunity/fields/Lead_Sub_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Sub_Source__c</fullName>
    <label>Lead Sub Source</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LeadSource</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>99 Acres</fullName>
            </value>
            <value>
                <fullName>Alternate Channel Partner</fullName>
            </value>
            <value>
                <fullName>BING</fullName>
            </value>
            <value>
                <fullName>Boat Show</fullName>
            </value>
            <value>
                <fullName>Bombay Times</fullName>
            </value>
            <value>
                <fullName>BQS</fullName>
            </value>
            <value>
                <fullName>Brightroll</fullName>
            </value>
            <value>
                <fullName>Chatbot</fullName>
            </value>
            <value>
                <fullName>click.in</fullName>
            </value>
            <value>
                <fullName>Click India</fullName>
            </value>
            <value>
                <fullName>coliers.com</fullName>
            </value>
            <value>
                <fullName>Collateral 1</fullName>
            </value>
            <value>
                <fullName>Collateral 2</fullName>
            </value>
            <value>
                <fullName>COLOMBIA</fullName>
            </value>
            <value>
                <fullName>Commonfloor</fullName>
            </value>
            <value>
                <fullName>DBM</fullName>
            </value>
            <value>
                <fullName>DNA</fullName>
            </value>
            <value>
                <fullName>Economic Times</fullName>
            </value>
            <value>
                <fullName>EDM / Email</fullName>
            </value>
            <value>
                <fullName>EEH OOH</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Employee Reference</fullName>
                <label>Employee reference</label>
            </value>
            <value>
                <fullName>ETOUR</fullName>
            </value>
            <value>
                <fullName>ETROS</fullName>
            </value>
            <value>
                <fullName>Exclusive Apartments</fullName>
            </value>
            <value>
                <fullName>Existing client ref</fullName>
            </value>
            <value>
                <fullName>FACEBOOK</fullName>
            </value>
            <value>
                <fullName>Facebook_Conversion_Marathi</fullName>
            </value>
            <value>
                <fullName>Facebook_SK</fullName>
            </value>
            <value>
                <fullName>Forbes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>