force-app/main/default/objects/Opportunity/fields/Lead_Sub_Sub_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Sub_Sub_Source__c</fullName>
    <label>Lead Sub Sub-Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bombay times</fullName>
            </value>
            <value>
                <fullName>Business Today</fullName>
            </value>
            <value>
                <fullName>DNA</fullName>
            </value>
            <value>
                <fullName>Economic times</fullName>
            </value>
            <value>
                <fullName>Forbes</fullName>
            </value>
            <value>
                <fullName>Fortune India</fullName>
            </value>
            <value>
                <fullName>Hindustan times</fullName>
            </value>
            <value>
                <fullName>Indian Express</fullName>
            </value>
            <value>
                <fullName>Loksatta</fullName>
            </value>
            <value>
                <fullName>Maharashtra times</fullName>
            </value>
            <value>
                <fullName>Mid-day</fullName>
            </value>
            <value>
                <fullName>Mumbai Mirror</fullName>
            </value>
            <value>
                <fullName>Newsweek</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Outlook</fullName>
            </value>
            <value>
                <fullName>Sakal</fullName>
            </value>
            <value>
                <fullName>The Hindu</fullName>
            </value>
            <value>
                <fullName>Time</fullName>
            </value>
            <value>
                <fullName>Times of India</fullName>
            </value>
            <value>
                <fullName>Tree Plantation Drive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>