force-app/main/default/objects/Opportunity/fields/Locality__c.field-meta.xml
<CustomField>
    <fullName>Locality__c</fullName>
    <formula>TEXT(Account.Locality__c)</formula>
    <label>Locality</label>
    <type>Text</type>
</CustomField>