force-app/main/default/objects/Opportunity/fields/Missed_Call_Aging__c.field-meta.xml
<CustomField>
    <fullName>Missed_Call_Aging__c</fullName>
    <formula>IF( Last_CRM_Call_Subject__c == &apos;Missed Call&apos;,  TODAY() -  DATEVALUE( Last_CRM_Call_Attempt_Date__c ) , null)</formula>
    <label>Missed Call Aging</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>