force-app/main/default/objects/Opportunity/fields/Mobile_Email_Update_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Email_Update_Approval_Status__c</fullName>
    <label>Mobile &amp; Email Update Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sent for Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>