force-app/main/default/objects/Opportunity/fields/Mobile_No_with_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Mobile_No_with_Country_Code__c</fullName>
    <formula>TRIM(RIGHT( TEXT(Account.Country_Code__c) , LEN(TEXT(Account.Country_Code__c))-1 ))+Account.Mobile_No__c</formula>
    <label>Mobile No with Country Code</label>
    <type>Text</type>
</CustomField>