force-app/main/default/objects/Opportunity/fields/Name_O__c.field-meta.xml
<CustomField>
    <fullName>Name_O__c</fullName>
    <label>Name(O)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>