force-app/main/default/objects/Opportunity/fields/Name_of_Unregistered_Corporate__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Unregistered_Corporate__c</fullName>
    <label>Name of Unregistered Corporate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>