force-app/main/default/objects/Opportunity/fields/Name_Of_Walkin_Referee__c.field-meta.xml
<CustomField>
    <fullName>Name_Of_Walkin_Referee__c</fullName>
    <label>Name Of Walkin Referee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>