force-app/main/default/objects/Opportunity/fields/NameofUnregisteredCorporate_LeadSource__c.field-meta.xml
<CustomField>
    <fullName>NameofUnregisteredCorporate_LeadSource__c</fullName>
    <label>Other Corporate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>