force-app/main/default/objects/Opportunity/fields/Net_Realization__c.field-meta.xml
<CustomField>
    <fullName>Net_Realization__c</fullName>
    <description>Net Realization in psf</description>
    <formula>(RW_Agreement_Value__c  -  Brokerage_amount__c  -  Interest_Cost__c  -  Other_Cost__c ) /   RW_Project_Unit__r.Actual_Area_value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Realization (psf)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>