force-app/main/default/objects/Opportunity/fields/News_Letter_Date__c.field-meta.xml
<CustomField>
    <fullName>News_Letter_Date__c</fullName>
    <label>News Letter Date</label>
    <type>Date</type>
</CustomField>