force-app/main/default/objects/Opportunity/fields/Not_Contactable_Email_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Not_Contactable_Email_Sent_Date__c</fullName>
    <label>Not Contactable Email Sent Date</label>
    <type>Date</type>
</CustomField>