force-app/main/default/objects/Opportunity/fields/NRI_OS_Sourcing_Head__c.field-meta.xml
<CustomField>
    <fullName>NRI_OS_Sourcing_Head__c</fullName>
    <label>NRI/OS Sourcing Head</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ankur Sharma</fullName>
            </value>
            <value>
                <fullName>Dhiren Goswami</fullName>
            </value>
            <value>
                <fullName>DIRECT</fullName>
                <default>true</default>
                <label>DIRECT</label>
            </value>
            <value>
                <fullName>Sahil Bhatia</fullName>
            </value>
            <value>
                <fullName>Sanchit Gupta</fullName>
            </value>
            <value>
                <fullName>Virat Vandre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>