force-app/main/default/objects/Opportunity/fields/NRI_OS_Sourcing_Manager__c.field-meta.xml
<CustomField>
    <fullName>NRI_OS_Sourcing_Manager__c</fullName>
    <label>NRI/OS Sourcing Manager</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aakash Chavan</fullName>
            </value>
            <value>
                <fullName>A Amit Sachde</fullName>
            </value>
            <value>
                <fullName>Aashima Sheikh</fullName>
            </value>
            <value>
                <fullName>Abhijit Karande</fullName>
            </value>
            <value>
                <fullName>Abhik Nandy</fullName>
            </value>
            <value>
                <fullName>A Bushra Shaikh</fullName>
            </value>
            <value>
                <fullName>A Deepak Dubey</fullName>
            </value>
            <value>
                <fullName>A Dikshant Wankhede</fullName>
            </value>
            <value>
                <fullName>A Harendra Sharma</fullName>
            </value>
            <value>
                <fullName>A Harshal Randhive</fullName>
            </value>
            <value>
                <fullName>A Jagruti More</fullName>
            </value>
            <value>
                <fullName>A Janki Singh</fullName>
            </value>
            <value>
                <fullName>A Kamlesh Malviya</fullName>
            </value>
            <value>
                <fullName>Akanksha Ghodke</fullName>
            </value>
            <value>
                <fullName>A Khalid Khan</fullName>
            </value>
            <value>
                <fullName>A Manan Seth</fullName>
            </value>
            <value>
                <fullName>Amir khan</fullName>
            </value>
            <value>
                <fullName>Anarock AOP</fullName>
            </value>
            <value>
                <fullName>Anarock central zone</fullName>
            </value>
            <value>
                <fullName>Anarock KDMC</fullName>
            </value>
            <value>
                <fullName>Anarock Navi Mumbai</fullName>
            </value>
            <value>
                <fullName>Anarock Thane</fullName>
            </value>
            <value>
                <fullName>Anarock Western + SOBO</fullName>
            </value>
            <value>
                <fullName>A Navnit Singh</fullName>
            </value>
            <value>
                <fullName>Aniket Singh</fullName>
            </value>
            <value>
                <fullName>A Nilesh Pande</fullName>
            </value>
            <value>
                <fullName>A Ninad Gade</fullName>
            </value>
            <value>
                <fullName>Anjali chiplunkar</fullName>
            </value>
            <value>
                <fullName>Ankush Tayade</fullName>
            </value>
            <value>
                <fullName>A Priyanka Makhija</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>