force-app/main/default/objects/Opportunity/fields/Number_of_Total_Visits__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Total_Visits__c</fullName>
    <formula>IF(AND(!ISNULL(RW_Number_of_Visits__c), !ISBLANK(RW_Number_of_Visits__c)), RW_Number_of_Visits__c, 0 ) +  IF(AND(!ISNULL( RW_Number_of_Re_Visit__c ), !ISBLANK(RW_Number_of_Re_Visit__c )), RW_Number_of_Re_Visit__c , 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Total Visits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>