force-app/main/default/objects/Opportunity/fields/Opp_Inactive_Date__c.field-meta.xml
<CustomField>
    <fullName>Opp_Inactive_Date__c</fullName>
    <label>Opp Inactive Date</label>
    <type>Date</type>
</CustomField>