force-app/main/default/objects/Opportunity/fields/Opportunity_cooling_period_on_assignmen__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_cooling_period_on_assignmen__c</fullName>
    <formula>IF(
  NOT(ISBLANK(RW_Project__r.Opportunity_cooling_period_on_assignment__c)),
  DATETIMEVALUE(
    DATEVALUE(CreatedDate) + 
    RW_Project__r.Opportunity_cooling_period_on_assignment__c
  ) + 
  (CreatedDate - DATETIMEVALUE(DATEVALUE(CreatedDate))),
  NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity cooling period -on assignmen</label>
    <type>DateTime</type>
</CustomField>