force-app/main/default/objects/Opportunity/fields/Opportunity_EDC_Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_EDC_Unique_Key__c</fullName>
    <label>Opportunity EDC Unique Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>