force-app/main/default/objects/Opportunity/fields/Opportunity_reassigned__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_reassigned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opportunity reassigned</label>
    <type>Checkbox</type>
</CustomField>