force-app/main/default/objects/Opportunity/fields/Opportunity_Status__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Status__c</fullName>
    <label>Opportunity Status - Sharing</label>
    <length>100</length>
    <type>Text</type>
</CustomField>