force-app/main/default/objects/Opportunity/fields/Opportunity_Status_Field__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Status_Field__c</fullName>
    <formula>IF(   RW_Opportunity_Status__c = &apos;Active&apos;,   
AccountId +&apos;-&apos;+ RW_Project__c +&apos;-&apos;+  RW_Opportunity_Status__c , 
AccountId +&apos;-&apos;+ RW_Project__c +&apos;-&apos;+  RW_Opportunity_Status__c +&apos;-&apos;+ TEXT(Opp_Inactive_Date__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Status Field</label>
    <type>Text</type>
</CustomField>