force-app/main/default/objects/Opportunity/fields/Opportunity_Status_Matched__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Status_Matched__c</fullName>
    <formula>IF(RW_Opportunity_Status__c == Opportunity_Status__c , true, false)</formula>
    <label>Opportunity Status Matched?</label>
    <type>Checkbox</type>
</CustomField>