force-app/main/default/objects/Opportunity/fields/Opportunity_Total_Score__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Total_Score__c</fullName>
    <inlineHelpText>This score is system-generated</inlineHelpText>
    <label>Opportunity Total Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>