force-app/main/default/objects/Opportunity/fields/Other_Cost__c.field-meta.xml
<CustomField>
    <fullName>Other_Cost__c</fullName>
    <description>Any other cost incurred post booking by the company</description>
    <label>Other Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>