force-app/main/default/objects/Opportunity/fields/Other_Details_DOB__c.field-meta.xml
<CustomField>
    <fullName>Other_Details_DOB__c</fullName>
    <label>Other Details - DOB</label>
    <type>Date</type>
</CustomField>