force-app/main/default/objects/Opportunity/fields/Other_Details_Gender__c.field-meta.xml
<CustomField>
    <fullName>Other_Details_Gender__c</fullName>
    <label>Other Details - Gender</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Female</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>