force-app/main/default/objects/Opportunity/fields/Other_Details_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Other_Details_Last_Name__c</fullName>
    <label>Other Details - Last Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>