force-app/main/default/objects/Opportunity/fields/Payment_received_Zero_day__c.field-meta.xml
<CustomField>
    <fullName>Payment_received_Zero_day__c</fullName>
    <label>Payment received- Zero day</label>
    <type>Date</type>
</CustomField>