force-app/main/default/objects/Opportunity/fields/Physical_Document_Received__c.field-meta.xml
<CustomField>
    <fullName>Physical_Document_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Physical Document Received</label>
    <type>Checkbox</type>
</CustomField>